@@ -19,6 +19,7 @@ from unittest.mock import patch
 import pytest
 
 from astroid import (
+    Assign,
     Const,
     Slice,
     Uninferable,
@@ -7388,3 +7389,33 @@ def test_empty_format_spec() -> None:
     assert isinstance(node, nodes.JoinedStr)
 
     assert list(node.infer()) == [util.Uninferable]
+
+
+@pytest.mark.parametrize(
+    "source, expected",
+    [
+        (
+            """
+class Cls:
+    # pylint: disable=too-few-public-methods
+    pass
+
+c_obj = Cls()
+
+s1 = f'{c_obj!r}' #@
+""",
+            "<__main__.Cls",
+        ),
+        ("s1 = f'{5}' #@", "5"),
+    ],
+)
+def test_joined_str_returns_string(source, expected) -> None:
+    """Regression test for https://github.com/pylint-dev/pylint/issues/9947."""
+    node = extract_node(source)
+    assert isinstance(node, Assign)
+    target = node.targets[0]
+    assert target
+    inferred = list(target.inferred())
+    assert len(inferred) == 1
+    assert isinstance(inferred[0], Const)
+    inferred[0].value.startswith(expected)
