@@ -13,6 +13,10 @@ What's New in astroid 3.3.4?
 ============================
 Release date: TBA
 
+* Fix regression with f-string inference.
+
+  Closes pylint-dev/pylint#9947
+
 * Fix bug with ``manager.clear_cache()`` not fully clearing cache
 
   Refs https://github.com/pylint-dev/pylint/pull/9932#issuecomment-2364985551
